--- a/springbootstudy/pom.xml
+++ b/springbootstudy/pom.xml
@@ -93,6 +93,13 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.7</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -100,7 +107,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-
 			</plugin>
 		</plugins>
 	</build>
